@@ -1,3 +1,14 @@
+2019-08-25  Fujii Hironori  <Hironori.Fujii@sony.com>
+
+        Regression(r248533) Assertion hit in isMainThread() for some clients using WTF because the main thread is not initialized
+        https://bugs.webkit.org/show_bug.cgi?id=201083
+        <rdar://problem/54651993>
+
+        Unreviewed build fox for Windows.
+
+        * wtf/win/MainThreadWin.cpp:
+        (WTF::isMainThreadInitialized): Added.
+
 2019-08-23  Jiewen Tan  <jiewen_tan@apple.com>
 
         Unreviewed, build fix after r249059
